# Bomberman3D

./: CMakeLists.txt  justfile  launch.sh  main.cpp
AScene/: AScene.cpp  AScene.hpp  CMakeLists.txt
Core/: CMakeLists.txt  Core.cpp  Core.hpp
Engine/: AudioEngine.cpp  AudioEngine.hpp  Button.cpp  Button.hpp  CMakeLists.txt  Engine.cpp  Engine.hpp  Event.cpp  Event.hpp  Material.cpp  Material.hpp  Model3D.cpp  Model3D.hpp  SFX.cpp  SFX.hpp
Game/: ACharacter.cpp  ACharacter.hpp  Bomb.cpp  Bomb.hpp  Bonuses.cpp  Bonuses.hpp  Bot.cpp  Bot.hpp  CMakeLists.txt  Game.cpp  Game.hpp  Map.cpp  Map.hpp  Player.cpp  Player.hpp
Menu/: AScene2D.cpp  AScene2D.hpp  CMakeLists.txt  PlayerBox.cpp  PlayerBox.hpp  Settings.cpp  Settings.hpp
Utils/: CMakeLists.txt  Clock.cpp  Clock.hpp
assets/: player.iqm  runninganim.iqm  standinganim.iqm
assets/maps/: map1.txt
cmake/: Findraylib.cmake
